# spot

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.with_build  README.md  build.rs  build.sh  docker-compose.yml  env.default
.github/workflows/: docker.yml  dockerhub_readme.yml  rust.yml
docs/: create-beam-task.sh  example-query.json  listen-for-beam-results.sh
lens_queries/: cce.cql  ccp.cql  dhki.cql  exliquid.cql  itcc.cql
src/: banner.rs  beam.rs  catalogue.rs  config.rs  health.rs  main.rs  sse_event_type.rs
src/resources/test/: catalogue_bbmri.json  catalogue_bbmri_no_diagnoses.json  criteria_groups_bbmri.json
