[package]
name = "spot"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://github.com/samply/spot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-sse = "5.1.0"
async-stream = "0.3.4"
axum = "0.6.12"
#axum-macros = "0.3.7"
clap = { version = "4.2.1", features = ["env", "derive"] }
futures = "0.3.28"
hyper = { version = "1.0.1", features = ["client"] }
serde = { version = "1.0.159", features = ["serde_derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
http = "0.2.9"
url = "2.3.1"

[build-dependencies]
build-data = "0.1.4"

[profile.release]
#opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
