[package]
name = "rustyspot"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
documentation = "https://github.com/samply/spot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["env", "derive"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
beam-lib = { git = "https://github.com/samply/beam", branch = "develop", features=["http-util"] }
once_cell = "1"
async-sse = "5.1"
futures-util = { version = "0.3", default-features = false, features = ["std", "io"] }

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "default-tls"] }
tower-http = { version = "0.6", features = ["cors"] }

[build-dependencies]
build-data = "0.2.1"

[profile.release]
#opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
